--- a/styles.css
+++ b/styles.css
@@ -6,18 +6,15 @@ body {
 .icon {
     height: 2rem;
     width: 2rem;
-    fill: rgb(224, 78, 42);
-}
-
-.icon:hover {
-    cursor: pointer;
+    /* fill: rgb(224, 78, 42); 
+    Color was changed in indivdual svg files of icons */
 }
 
 .container {
     min-height: 100vh;
     margin: 0;
     display: grid;
-    grid-template-rows: 1fr 4fr;
+    grid-template-rows: auto 4fr;
     grid-template-columns: 1fr 4fr;
 }
 
@@ -25,8 +22,9 @@ body {
     grid-area: 1 / 2 / 2 / 3;
     display: grid;
     grid-template-columns: 2fr 1fr;
-    grid-template-rows: 1fr 2fr;
+    grid-template-rows: auto 2fr;
     padding: 1rem 2rem;
+    gap: 1rem;
 }
 
 .header > div {
@@ -52,6 +50,41 @@ body {
     justify-content: center;
     align-items: center;
     gap: 2rem;
+    font-weight: bold;
+}
+
+.header-welcome {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: auto 1fr;
+}
+
+.header-welcome img {
+    height: 5rem;
+    width: 5rem;
+    border-radius: 75px;
+    grid-column: 1 / 2;
+    grid-row: 1 / -1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.welcome-message-top {
+    display: flex;
+    justify-content: flex-start;
+    align-self: flex-end;
+}
+
+.welcome-message-bottom h3 {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.user-image img {
+    height: 3rem;
+    width: 3rem;
+    border-radius: 25px;
 }
 
 .header-btns {
@@ -92,15 +125,17 @@ body {
 
 .sidebar {
     grid-area: 1 / 1 / 3 / 2;
-    display: grid;
-    grid-template-rows: 10% 40% 50%;
-    position: relative;
+    /* display: grid; */
+    /* grid-template-rows: 10% 40% 50%; */
+    /* position: relative; */
     background-color: rgb(11, 40, 54);
     color: rgb(224, 78, 42);
     padding: 10px;
-    flex-grow: 1;
+    position: relative;
+    height: 100%;
+    /* flex-grow: 1;
     flex-shrink: 1;
-    flex-wrap: wrap;
+    flex-wrap: wrap; */
 }
 
 .sidebar ul {
@@ -121,10 +156,18 @@ body {
     padding-left: 25px;
 }
 
-li:hover {
+li {
     cursor: pointer;
+}
+
+li,
+.project {
+    transform: scale(1); 
+    transition: transform 300ms; 
+}
+
+li:hover {
     transform: scale(1.2);
-    transition: 300ms;
 }
 
 .logo {
@@ -148,30 +191,115 @@ li:hover {
 .content {
     background-color: rgb(228, 230, 234);
     display: grid;
-    grid-template-columns: 2fr 1fr;
-    gap: 1rem;
+    grid-template-columns: 70% 30%;
+    gap: 2rem;
+    padding: 1rem 2rem;
+    box-shadow: inset 0 5px 5px gray;
 }
 
 .projects {
-    min-height: 100vh;
     display: grid;
     grid-template-rows: auto 1fr 1fr;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 10px;
-    padding: 1rem 2rem;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-auto-rows: 1fr;
+    gap: 2rem 1rem;
 }
 
 .projects > h3 {
     margin: 0;
+    padding: 1rem;
     grid-column: 1 / -1;
     font-size: 2rem;
 }
 
 .project {
-    border: 1px dashed black;
+    box-shadow: 0 5px 5px gray;
+    background-color: rgb(172, 196, 207);
+    color: rgb(0, 0, 0);
+    border-radius: 20px;
+    padding: 1rem;
+    display: grid;
+}
+
+.project-action {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 1rem;
+}
+
+.project .project-star {
+    cursor: pointer;
+}
+
+.project:hover {
+    transform: scale(1.02);
 }
 
 .news {
     display: grid;
     grid-template-rows: 1fr 1fr;
+    gap: 2rem 1rem;
+    padding: 1rem;
+}
+
+.announcements {
+    display: flex;
+    flex-direction: column;
+}
+
+.announcements h3 {
+    margin: 0;
+    padding: 1rem;
+    font-size: 2rem;
+}
+
+.trending {
+    display: flex;
+    flex-direction: column;
+}
+
+.announcements-section {
+    box-shadow: 0 5px 5px gray;
+    background-color: rgb(172, 196, 207);
+    color: rgb(0, 0, 0);
+    border-radius: 20px;
+    padding: 1rem;
+    display: grid;
+}
+
+.trending-section {
+    box-shadow: 0 5px 5px gray;
+    background-color: rgb(172, 196, 207);
+    color: rgb(0, 0, 0);
+    border-radius: 20px;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.trending-one,
+.trending-two,
+.trending-three {
+    display: flex;
+    padding: 1rem;
+    gap: 1.5rem;
+}
+
+.trending-section img {
+    height: 3rem;
+    width: 3rem;
+    border-radius: 25px;
+}
+
+.announcements > h3,
+.trending > h3 {
+    margin: 0;
+    padding: 1rem;
+}
+
+.announcement-border {
+    height: 1px;
+    width: 100%;
+    background-color: gray;
 }
